--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,175 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NUz-zh-CTG">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Users Table View Controller-->
+        <scene sceneID="toS-bM-NZi">
+            <objects>
+                <tableViewController id="N4c-K2-tVg" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ZdD-BU-cUf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="105" id="YIE-Xb-FJy">
+                                <rect key="frame" x="0.0" y="28" width="414" height="105"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YIE-Xb-FJy" id="3ry-je-sJ3">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9HZ-Ur-VfJ">
+                                            <rect key="frame" x="20" y="11" width="80.5" height="83"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="9HZ-Ur-VfJ" secondAttribute="height" multiplier="31:32" id="uzW-vI-ZRw"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x4n-YN-Wb8">
+                                            <rect key="frame" x="120.5" y="31" width="273.5" height="43"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="9HZ-Ur-VfJ" secondAttribute="bottom" id="8Tv-3p-OcQ"/>
+                                        <constraint firstItem="x4n-YN-Wb8" firstAttribute="leading" secondItem="9HZ-Ur-VfJ" secondAttribute="trailing" constant="20" id="CD8-vd-igY"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="x4n-YN-Wb8" secondAttribute="trailing" id="Dcr-Rk-sbg"/>
+                                        <constraint firstItem="x4n-YN-Wb8" firstAttribute="top" secondItem="3ry-je-sJ3" secondAttribute="topMargin" constant="20" id="U56-tz-Rk5"/>
+                                        <constraint firstItem="9HZ-Ur-VfJ" firstAttribute="top" secondItem="3ry-je-sJ3" secondAttribute="topMargin" id="lSK-6q-xZ5"/>
+                                        <constraint firstItem="9HZ-Ur-VfJ" firstAttribute="leading" secondItem="3ry-je-sJ3" secondAttribute="leadingMargin" id="qPb-SZ-WwO"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="x4n-YN-Wb8" secondAttribute="bottom" constant="20" id="rXi-x4-fT0"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Sp0-y9-EpE" kind="show" identifier="UserDetailSegue" id="kA3-IS-Slq"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="N4c-K2-tVg" id="C7U-HV-UVM"/>
+                            <outlet property="delegate" destination="N4c-K2-tVg" id="CQJ-Jo-xQ5"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="s4K-4u-1wS"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l2c-h7-ynq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="821.73913043478262" y="180.80357142857142"/>
+        </scene>
+        <!--User Detail View Controller-->
+        <scene sceneID="wqQ-lo-LKd">
+            <objects>
+                <viewController id="Sp0-y9-EpE" customClass="UserDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="K4K-2D-qws">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pZM-qZ-T5J">
+                                <rect key="frame" x="20" y="98" width="374" height="272"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="272" id="ZNe-Ad-UKe"/>
+                                    <constraint firstAttribute="width" constant="374" id="dbQ-sL-K1R"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fZ2-oL-Lsy">
+                                <rect key="frame" x="20" y="400" width="374" height="49"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whV-cD-3P6">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brian" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ca4-Qb-f8Y">
+                                        <rect key="frame" x="0.0" y="28.5" width="374" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="rgJ-G9-gU7">
+                                <rect key="frame" x="20" y="469" width="374" height="41"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u8r-jZ-qF1">
+                                        <rect key="frame" x="0.0" y="0.0" width="65.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Utah" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KI9-gF-fcA">
+                                        <rect key="frame" x="0.0" y="20.5" width="37" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="53r-hn-f2Q">
+                                <rect key="frame" x="20" y="530" width="374" height="43"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6J-pn-K44">
+                                        <rect key="frame" x="0.0" y="0.0" width="41" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brianvichez@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xe1-lD-h9W">
+                                        <rect key="frame" x="0.0" y="22.5" width="182.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="J8V-Ae-Gj9" firstAttribute="trailing" secondItem="pZM-qZ-T5J" secondAttribute="trailing" constant="20" id="9m5-Jb-QMO"/>
+                            <constraint firstItem="J8V-Ae-Gj9" firstAttribute="trailing" secondItem="rgJ-G9-gU7" secondAttribute="trailing" constant="20" id="BSf-7L-CjU"/>
+                            <constraint firstItem="rgJ-G9-gU7" firstAttribute="leading" secondItem="J8V-Ae-Gj9" secondAttribute="leading" constant="20" id="Hof-ow-ikf"/>
+                            <constraint firstItem="53r-hn-f2Q" firstAttribute="leading" secondItem="J8V-Ae-Gj9" secondAttribute="leading" constant="20" id="IWj-y3-6dg"/>
+                            <constraint firstItem="pZM-qZ-T5J" firstAttribute="top" secondItem="J8V-Ae-Gj9" secondAttribute="top" constant="10" id="MBf-zI-qVO"/>
+                            <constraint firstItem="fZ2-oL-Lsy" firstAttribute="leading" secondItem="J8V-Ae-Gj9" secondAttribute="leading" constant="20" id="OXQ-ir-0Am"/>
+                            <constraint firstItem="fZ2-oL-Lsy" firstAttribute="top" secondItem="pZM-qZ-T5J" secondAttribute="bottom" constant="30" id="QUT-X9-5Fb"/>
+                            <constraint firstItem="rgJ-G9-gU7" firstAttribute="top" secondItem="fZ2-oL-Lsy" secondAttribute="bottom" constant="20" id="g1h-yZ-KYv"/>
+                            <constraint firstItem="53r-hn-f2Q" firstAttribute="top" secondItem="rgJ-G9-gU7" secondAttribute="bottom" constant="20" id="hMM-BL-TbF"/>
+                            <constraint firstItem="J8V-Ae-Gj9" firstAttribute="trailing" secondItem="fZ2-oL-Lsy" secondAttribute="trailing" constant="20" id="mks-BQ-jnp"/>
+                            <constraint firstItem="J8V-Ae-Gj9" firstAttribute="trailing" secondItem="53r-hn-f2Q" secondAttribute="trailing" constant="20" id="uxd-FM-Lu3"/>
+                            <constraint firstItem="pZM-qZ-T5J" firstAttribute="leading" secondItem="J8V-Ae-Gj9" secondAttribute="leading" constant="20" id="wit-YG-9R9"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="J8V-Ae-Gj9"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="hjp-D6-Fm6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jml-DA-Mi2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1628.985507246377" y="180.80357142857142"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="gPc-sL-GEy">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NUz-zh-CTG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="N42-22-JJC">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="N4c-K2-tVg" kind="relationship" relationship="rootViewController" id="Tp1-R8-Jfk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2zu-lO-12o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-39.200000000000003" y="181.25937031484258"/>
+        </scene>
+    </scenes>
 </document>
